fix: fix layout issues

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -205,9 +205,7 @@ article {
 		& pre,
 		& code {
 			font-family: var(--font-stack-mono);
-			padding: 1rem 0.75rem;
 			border-radius: 0.25rem;
-			margin-block: 1.5rem;
 		}
 	}
 
